# polars

./: .gitignore  README.md  pyproject.toml
Notebooks/: 01.Introduccion.ipynb  02.Ejercicio_EDA.ipynb
